# storytrends-bootcamp

./: .env.template  .gitignore  README.md  compose.yaml
samples/source-nodejs/: Dockerfile  package.json
samples/source-nodejs-nyt/: Dockerfile  compose.yaml  package-lock.json
samples/source-nodejs-nyt/src/: run.ts
samples/source-nodejs-nyt/src/supabase/: client.ts  types.gen.ts
samples/source-nodejs/src/supabase/: api.ts  types.gen.ts
samples/source-python/: Dockerfile  environment.yml  pyproject.toml
samples/source-python-bbc/: Dockerfile  compose.yaml
samples/source-python-bbc/st_module/: db.py  process.py  start.py
samples/source-python/source_python/: db.py  kaggle_bbc.py  start.py
samples/source-rss/: compose.yaml  environment.yml  pyproject.toml
samples/source-rss/st_module/: custom_client.py  db.py  rss.py  start.py
samples/source-sitemap/: environment.yml  pyproject.toml
samples/source-sitemap/st_module/: custom_client.py  db.py  process.py  rss.py  sitemap.py  start.py
source-kaggle/: Dockerfile  README.md  environment.yml  pyproject.toml
source-kaggle/source_kaggle/: db.py  kaggle_bbc.py  start.py
source-nodejs/src/: run.ts  types.ts  util.ts
source-nodejs/src/supabase/: types.gen.ts
